plugins {
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id "java"
    id "java-library"
}

allprojects {
    group = "ru.boomearo"
    version = "1.0"

    compileJava {
        options.encoding = "UTF-8"
    }

    jar {
        manifest {
            attributes "Main-Class": "ru.boomearo.networkrelay.NetworkRelayBootstrap"
            attributes "Multi-Release": "true"
        }
    }

    artifacts {
        archives shadowJar
    }

    shadowJar {
        archiveBaseName.set("NetworkRelay")
        archiveClassifier.set("")
        archiveVersion.set("")
        transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }

    ext {
        lombokVersion = "1.18.34"
        nettyVersion = "4.1.111.Final"
        spongeConfig = "4.1.2"
        jlineTerminal = "3.26.1"
        consoleAppender = "1.3.0"
        log4jVersion = "2.23.1"
        guavaVersion = "33.2.1-jre"
        dsiUtils = "2.7.3"
    }

    dependencies {
        implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
        implementation "org.apache.logging.log4j:log4j-iostreams:${log4jVersion}"
        implementation "io.netty:netty-transport-native-epoll:${nettyVersion}:linux-x86_64"
        implementation "io.netty:netty-transport-native-epoll:${nettyVersion}:linux-aarch_64"
        implementation "io.netty:netty-handler:${nettyVersion}"
        implementation "org.spongepowered:configurate-yaml:${spongeConfig}"
        implementation "net.minecrell:terminalconsoleappender:${consoleAppender}"
        implementation "org.jline:jline-terminal-jansi:${jlineTerminal}"
        implementation("com.google.guava:guava:${guavaVersion}")
        implementation "it.unimi.dsi:dsiutils:${dsiUtils}"

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    }

}
